--- a/example project.html
+++ b/example project.html
@@ -4,13 +4,116 @@
 		<title>Example project</title>
 	</head>
     <body>
-    <h1>This is a h1 tag</h1>
+    <h1>Hotel online reservation system</h1>
         <p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor <strong>incididunt ut labore</strong> et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud <em>exercitation ullamco</em> laboris nisi ut aliquip ex ea commodo
-			consequat. <u>Duis aute irure dolor</u> in reprehenderit <i>in voluptate </i>velit esse
-			<u><i>cillum dolore eu fugiat nulla</i> </u> pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			<strong>Build a website </strong>to be used by potential guests and hotel staff to make bookings.
+            <em>Increase global</em> reach of hotel website.
+            Display organized information of hotel, prices and pictures.
+            View availability of rooms in real time.
+            <u>User-friendly interface</u> 
+            <u><i>Provide a secure payment gateway for online transaction.</i> </u>
+            
 		</p>
+        
+<!-- Table -->
+		<table>
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Age</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Brad Traversy</td>
+					<td>brad@something.com</td>
+					<td>35</td>
+				</tr>
+				<tr>
+					<td>John Doe</td>
+					<td>jdoe@something.com</td>
+					<td>45</td>
+				</tr>
+				<tr>
+					<td>Sara Williams</td>
+					<td>sara@something.com</td>
+					<td>25</td>
+				</tr>
+			</tbody>
+		</table>
+
+		<br>
+		<hr>
+		<br>
+
+		<!-- Forms -->
+		<form action="process.php" method="POST">
+			<div>
+				<label>First Name</label>
+				<input type="text" name="firstName" placeholder="Enter first name">
+			</div>
+			<br>
+			<div>
+				<label>Last Name</label>
+				<input type="text" name="lastName">
+			</div>
+			<br>
+			<div>
+				<label>Email</label>
+				<input type="email" name="email">
+			</div>
+			<br>
+			<div>
+				<label>Message</label>
+				<textarea name="message"></textarea>
+			</div>
+			<br>
+			<div>
+				<label>Gender</label>
+				<select name="gender">
+					<option value="male">Male</option>
+					<option value="female">Female</option>
+					<option value="other">Other</option>
+				</select>
+			</div>
+			<br>
+				<div>
+					<label>Age:</label>
+					<input type="number" name="age" value="30">
+				</div>
+				<br>
+				<div>
+					<label>Birthday:</label>
+					<input type="date" name="birthday">
+				</div>
+				<br>
+				<input type="submit" name="submit" value="Submit">
+		</form>
+
+		<!-- Button -->
+		<button>Click Me</button>
+
+		<br>
+
+		<!-- Image -->
+		<a href="images/pict.jpg">
+			<img src="images/pict.jpg" alt="My Sample Image" width="200">
+		</a>
+
+		<!-- Quotations -->
+		<blockquote cite="http://traversymedia.com">
+			<strong>Build a website </strong>to be used by potential guests and hotel staff to make bookings.
+            <em>Increase global</em> reach of hotel website.
+            Display organized information of hotel, prices and pictures.
+            View availability of rooms in real time.
+            <u>User-friendly interface</u> 
+            <u><i>Provide a secure payment gateway for online transaction.</i> </u>
+		</blockquote>
+
+		<p><cite>HTML </cite> by Alessandro Pinna</p>
+
+		<div style="margin-top:500px"></div>
+	</body>
+</html>
     </body>
